syntax = "proto3";

package auth;

import "google/protobuf/any.proto";

option go_package = "./pkg/auth/pb";

service AuthService {
    rpc PostSignup(SignUpRequest) returns (SignUpResponse){}
}

message SignUpRequest {
    string firstname =1;
    string lastname =2;
    string email =3;
    int64 phone =4;
    string username =5;
    string password=6;
}

message SignUpResponse {
   int32 statuscode =1;
   string message =2;
   google.protobuf.Any errors = 3;
   google.protobuf.Any data = 4;
   
}